# LibCMaker_spdlog

./: .appveyor.yml  .travis.yml  README.md  cmr_build_spdlog.cmake
ci/: ci_lib_params.sh
cmake/: cmr_build_rules_spdlog.cmake  cmr_find_package_spdlog.cmake  cmr_get_download_params_spdlog.cmake
cmake/modules/: Findspdlog.cmake
patch/spdlog-1.4.2/: CMakeLists.txt
patch/spdlog-1.4.2.20191231/: CMakeLists.txt
patch/spdlog-1.4.2.20191231/cmake/: utils.cmake
patch/spdlog-1.4.2/include/spdlog/: common.h
samples/TestCompileWithspdlog/: CMakeLists.txt
samples/TestCompileWithspdlog/test/: CMakeLists.txt
samples/ci_sample/: CMakeLists.txt  README.md
samples/ci_sample/src/: example.cpp  example_test.cpp
samples/ci_sample/test/: CMakeLists.txt
